layout refinement, ease of use

--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://people.rit.edu/~lcs9244/portfolio/"
+  "homepage": "https://people.rit.edu/~lcs9244/portfolio"
 }
